--- a/res/xml/providers.xml
+++ b/res/xml/providers.xml
@@ -96,6 +96,12 @@
         <outgoing uri="smtp+ssl+://smtp.gmail.com" username="$email" />
     </provider>
 
+    <!-- iCloud -->
+    <provider id="icloud" label="iCloud" domain="icloud.com">
+        <incoming uri="imap+ssl+://imap.mail.me.com" username="$email" />
+        <outgoing uri="smtp+tls+://smtp.mail.me.com" username="$email" />
+    </provider>
+
     <!-- USA -->
     <provider id="comcast" label="Comcast" domain="comcast.net">
         <incoming uri="pop3+ssl+://mail.comcast.net" username="$user" />
